--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,17 +4,18 @@
 </p>
 
 <div class="style"></div>
-  <div class="login group">
+  <div class="login-up group">
     <h1 class="login-head">Sign Up</h1>
 
     <form class="login-form group" action="/users" method="post">
       <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token  %>">
-      <label class="login-label" for="email">Email: <input class="login-input" id="email" name="user[email]" type="text"></label> <br>
-      <label class="login-label" for="password">Password:<input class="login-input" id="password" name="user[password]" type="password"></label>
+      <label class="login-label" for="email">Email:  <input class="login-input" id="email" name="user[email]" type="text"></label> <br>
+      <label class="login-label" for="password">Password:  <input class="login-input" id="password" name="user[password]" type="password"></label>
       <br>
-      <button class="login-button">Create New User</button>
+      <button class="login-button">Sign Up</button>
     </form>
-    <a href="/session/new">Sign In</a>
+
+    <a href="/session/new" class="login-link">Back to Sign In</a>
 
     <% if flash[:errors] %>
     <div >
