--- a/app/assets/templates/tasks/link-item.jst.ejs
+++ b/app/assets/templates/tasks/link-item.jst.ejs
@@ -1,7 +1,15 @@
-<p class="editable" data-id="<%= task.id %>" data-field="name">
-    <%=task.escape('name')%>
-</p>
+<input id="<%="task" + task.id%>" type="checkbox" name="task-check" data-task-id="<%= task.id %> "
+    <% if (task.escape('completed') === "true") { %>
+      checked
+    <% } %>>
+    <label for="<%="task" + task.id%>" class="tasks-check">
+      <p class="editable" data-id="<%= task.id %>" data-field="name">
+          <%=task.escape('name')%>
+      </p>
+    </label>
 <button data-task-id="<%= task.id %>" data-project-id="<%= task.escape('project_id') %>" class="task-detail">></button>
+
+
 
 
     <!-- can do whites-space in CSS to fix this breaking line -->
