--- a/app/assets/templates/users/taskshow.jst.ejs
+++ b/app/assets/templates/users/taskshow.jst.ejs
@@ -1,5 +1,6 @@
 <h1> <%= user.escape('email') %></h1>
-<div class="tasks-window">
+<div class="tasks-window group">
   <ul id="tasks-list" class="tasks-list"></ul>
   <div id="task-form" class="task-form"></div>
+  <ul id="completed-tasks-list" class="completed-tasks-list"></ul>
 </div>
