--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -2,5 +2,7 @@
 <div class="tasks-window group">
   <ul id="tasks-list" class="tasks-list"></ul>
   <div id="task-form" class="task-form"></div>
+  <br>
+  Completed:
   <ul id="completed-tasks-list" class="completed-tasks-list"></ul>
 </div>
