--- a/app/assets/templates/tasks/show.jst.ejs
+++ b/app/assets/templates/tasks/show.jst.ejs
@@ -1,7 +1,9 @@
 <nav class="task-detail-nav group">
   <ul class="task-detail-links">
 
-    <li class="task-assignee"><a href="#">Assignee - to be linked</a></li>
+    <li class="task-assignee">
+
+</li>
 
     <li class="task due date">
       <a href="#">
