Restyles sign in and sign up pages.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,10 +12,10 @@
       <label class="login-label" for="email">Email:  <input class="login-input" id="email" name="user[email]" type="text"></label> <br>
       <label class="login-label" for="password">Password:  <input class="login-input" id="password" name="user[password]" type="password"></label>
       <br>
-      <button class="login-button">Sign Up</button>
+      <button class="logup-button">Create Account</button>
     </form>
 
-    <a href="/session/new" class="login-link">Back to Sign In</a>
+    <a href="/session/new" class="login-link">Back to Log In</a>
 
     <% if flash[:errors] %>
     <div >
