--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,18 +35,14 @@ html {
   width: 100%;
   /*height: 100%;*/
   background:
-    linear-gradient(
-    		#E1D9E4,
-    		transparent
-    	),
     	linear-gradient(
     		45deg,
-    		#fff,
+    		#ff4956,
     		transparent
     	),
     	linear-gradient(
     		-45deg,
-    		#7E6987,
+    		#f9792a,
     		transparent
     	);
 }
@@ -98,25 +94,39 @@ body {
 }
 
 .login {
-  width: 500px;
-  height: 470px;
+  width: 400px;
+  height: 400px;
   margin: 80px auto;
-  color: white;
   position: relative;
   display: block;
+  color: #b2b2b2;
 }
 
-.login::after {
-  content: "";
-  background: #C0B1C7;
-  opacity: 0.5;
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  border-radius: 20px;
+.style {
+  background: white;
+  width: 500px;
+  display: block;
+  margin: auto;
+  border-radius: 5px;
+}
+
+.samestyle {
+  width: 500px;
+  display: block;
+  margin: auto;
+  margin-top: -70px;
+  color: white;
+  font-size: 15px;
+}
+
+.signup {
+  display: inline-block;
+  padding-bottom: 50px;
+  float: right;
+}
+
+.signup > a {
+  display: inline-block;
 }
 
 .login-up {
@@ -130,8 +140,8 @@ body {
 
 .login-up::after {
   content: "";
-  background: #C0B1C7;
-  opacity: 0.5;
+  background: white;
+  /*opacity: 0.5;*/
   position: absolute;
   z-index: -1;
   top: 0;
@@ -142,9 +152,10 @@ body {
 }
 
 .login-head {
+  color: black;
   text-align: center;
-  font-size: 24px;
-  padding: 20px
+  font-size: 30px;
+  padding: 20px;
 }
 
 .login-form {
@@ -154,74 +165,106 @@ body {
 
 .login-label {
   float: right;
+  color: #b2b2b2;
 }
 
 .login-input {
   border-top: 1px solid #C0B1C7;
+  border: 1px solid #b2b2b2;
   padding: 5px;
   border-radius: 3px;
   -webkit-transition: all 0.30s ease-in-out;
   background: white;
-  color: black;
+  color: #b2b2b2;
   margin-bottom: 5px;
 }
 
 .login-input:focus {
   box-shadow: 0px 0px 3px 0px #BC94E0;
   border: 1px solid #BC94E0;
+  color: black;
 }
 
 .login-button {
-  background: #C0B1C7;
-  background-image: linear-gradient(to bottom, #C0B1C7, #A28BAD);
+  background: #efeded;
+  border: 1px solid #b2b2b2;
   padding: 10px;
+  color: #b2b2b2;
   display: block;
   border-radius: 3px;
-  box-shadow: 1px 1px 1px #666666;
-  width: 115px;
+  width: 50px;
   text-align: center;
   float: right;
   margin-top: 5px;
 }
 
+.logup-button {
+  background: #efeded;
+  border: 1px solid #b2b2b2;
+  padding: 10px;
+  color: #b2b2b2;
+  display: block;
+  border-radius: 3px;
+  width: 120px;
+  text-align: center;
+  float: right;
+  margin-top: 5px;
+}
+
+.logup-button:hover {
+  background: #c271e8;
+  /*box-shadow: 0px 0px 6px 0px #BC94E0;*/
+  border: 3px solid #d89af4;
+  padding: 8px;
+  color: white;
+}
+
 .login-button:hover {
-  background: #D8C5E0;
-  background-image: linear-gradient(to bottom, #D8C5E0, #C0B1C7);
+  background: #c271e8;
+  /*box-shadow: 0px 0px 6px 0px #BC94E0;*/
+  border: 3px solid #d89af4;
+  padding: 8px;
+  color: white;
 }
 
 .create-button {
-  background: #C0B1C7;
-  background-image: linear-gradient(to bottom, #C0B1C7, #9984A3);
-  padding: 20px;
+  background: transparent;
+  border: 1px solid white;
+  color: white;
+  padding: 5px;
   display: block;
-  box-shadow: 2px 2px 2px #666666;
-  border-radius: 6px;
-  width: 240px;
+  /*box-shadow: 2px 2px 2px #666666;*/
+  border-radius: 3px;
+  width: 60px;
   text-align: center;
   margin-top: 5px;
   margin-bottom: 5px;
+  margin-left: 10px;
+  font-size: 13px;
 }
 
 .create-button:hover {
-  background: #D8C5E0;
-  background-image: linear-gradient(to bottom, #D8C5E0, #C0B1C7);
+  background: white;
+  color: #b2b2b2;
 }
 
 .fb-create-button {
-  background: #C0B1C7;
-  background-image: linear-gradient(to bottom, #C0B1C7, #9984A3);
-  padding: 20px;
+  background: #ab5fcc;
+  padding: 10px;
+  margin: auto;
+  margin-top: -10px;
   display: block;
-  box-shadow: 2px 2px 2px #666666;
+  color: white;
   border-radius: 6px;
-  width: 240px;
+  width: 190px;
   text-align: center;
-  margin-top: 5px;
 }
 
 .fb-create-button:hover {
-  background: #D8C5E0;
-  background-image: linear-gradient(to bottom, #D8C5E0, #C0B1C7);
+  background: #c271e8;
+  /*box-shadow: 0px 0px 6px 0px #BC94E0;*/
+  border: 3px solid #d89af4;
+  padding: 7px;
 }
 
 .access {
@@ -231,6 +274,12 @@ body {
 
 .or {
   text-align: center;
+  display:flex;
+  margin-bottom: 20px;
+}
+
+.or > hr {
+
 }
 
 .login-link {
@@ -239,6 +288,7 @@ body {
   padding: 20px;
   right: 90px;
   text-decoration: underline;
+  color: #b2b2b2;
 }
 
 /*sigin end #############################*/
