Adds JQuery for sidebar toggle, not styled yet.

--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -2,7 +2,7 @@
   <nav class="sidebar group">
 
     <h2 class="sidebar-logo">
-      <a href="#">ImGonna</a>
+      <a href="#">ImGonna</a> <button type="button" class="close">&times</button>
     </h2>
 
     <ul class="sidebar-links">
