--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -160,16 +160,17 @@ body {
 }
 
 .login-form {
-  width: 270px;
+  width: 80%;
   margin: 15px auto;
+  float: center;
 }
 
 .login-label {
-  float: right;
   color: #b2b2b2;
 }
 
 .login-input {
+  width: 100%;
   border-top: 1px solid #C0B1C7;
   border: 1px solid #b2b2b2;
   padding: 5px;
@@ -195,8 +196,8 @@ body {
   border-radius: 3px;
   width: 50px;
   text-align: center;
-  float: right;
   margin-top: 5px;
+  float: right;
 }
 
 .logup-button {
@@ -208,8 +209,8 @@ body {
   border-radius: 3px;
   width: 120px;
   text-align: center;
-  float: right;
   margin-top: 5px;
+  float: right;
 }
 
 .logup-button:hover {
@@ -284,10 +285,9 @@ body {
 }
 
 .login-link {
-  position: absolute;
   display: block;
+  float: right;
   padding: 20px;
-  right: 90px;
   text-decoration: underline;
   color: #b2b2b2;
 }
