Panes properly extend to bottom of window.

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,6 +1,6 @@
 <% if signed_in? %>
 
-<div id="app-container" class="container" data-user="<%= current_user.id  %>"></div>
+<div id="app-container" class="container group" data-user="<%= current_user.id  %>"></div>
 <% end %>
 
 <script type="text/javascript" charset="utf-8">
