--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,6 +33,7 @@ html, body, header, nav, h1, h2, h4, h5, a, ul, li, div, form, p, input, button 
 }
 
 html {
+  min-height: 100%;
   background:
     	linear-gradient(
     		45deg,
@@ -79,7 +80,7 @@ body {
   font-family: "Helvetica", sans-serif;
   font-size: 16px;
   font-weight: 400;
-  height: 100%;
+  /*display: block;*/
 }
 
 /*signins##################################*/
@@ -95,7 +96,7 @@ body {
 
 .login {
   width: 400px;
-  height: 400px;
+  /*height: 400px;*/
   margin: 80px auto;
   position: relative;
   display: block;
@@ -112,8 +113,7 @@ body {
 
 .samestyle {
   width: 500px;
-  height: 100%;
-  margin: auto;
+  /*margin: auto;*/
   margin-top: -70px;
   color: white;
   font-size: 15px;
@@ -378,14 +378,18 @@ li:hover .header-dropdown{
 
 /*sidebar##############################*/
 
-.sidebar {
+.expanded {
   background: white;
   padding: 15px;
   border-left: 1px solid #7E6987;
   border-right: 1px solid #7E6987;
-  order: 1;
   display: block;
   width: 250px;
+  height: 100%;
+}
+
+.sidebar {
+  order: 1;
   /*height i want 100%*/
 }
 
@@ -442,11 +446,20 @@ li:hover .header-dropdown{
 
 /*sidebar-end#########################*/
 .project-show {
-  background: #EDE9F2;
+  order: 2;
+  position: relative;
+  float: left;
+  display: block;
+  /*background: #EDE9F2;
   border-radius: 5px;
   border: 1px solid #7E6987;
-  order: 2;
-  display: block;
+  /*display: block;
+  height: 100%;*/
+}
+
+.main {
+  background: #EDE9F2;
+  border-right: 1px solid #7E6987;
 }
 
 .project-show h1 {
@@ -572,8 +585,9 @@ input[type="checkbox"]:checked:hover + label::before {
 .task-detail-show {
   background: #EDE9F2;
   border-radius: 5px;
-  border: 1px solid #7E6987;
+  /*border: 1px solid #7E6987;*/
   order: 3;
+  height: 100%;
 }
 
 .task-detail-nav {
@@ -624,6 +638,12 @@ input[type="checkbox"]:checked:hover + label::before {
 #task-changes {
   font-size: 10pt;
 }
+
+.mainpage {
+  position: absolute;
+  height: 100%;
+}
+
 
 /*
 
