--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -1,3 +1,5 @@
+<div class="mainpage">
+
 <div id="sidebar" class="expanded">
   <nav class="sidebar group">
 
@@ -21,7 +23,9 @@
   </nav>
 </div>
 
-<div id="main" class="main">
+<div id="main" class="main group">
   <div class="project-show" id="project-show"></div>
   <div class="task-detail-show" id="task-detail-show"></div>
+</div>
+
 </div>
