--- a/app/assets/templates/workspaces/show_no_side.jst.ejs
+++ b/app/assets/templates/workspaces/show_no_side.jst.ejs
@@ -1,3 +1,5 @@
+<div class="mainpage">
+
 <div id="sidebar" class="closed">
   <nav class="sidebar group">
 
@@ -8,7 +10,9 @@
   </nav>
 </div>
 
-<div id="main" class="main">
+<div id="main" class="main-closed group">
   <div class="project-show" id="project-show"></div>
   <div class="task-detail-show" id="task-detail-show"></div>
+</div>
+
 </div>
