--- a/app/assets/templates/projects/form.jst.ejs
+++ b/app/assets/templates/projects/form.jst.ejs
@@ -1,8 +1,10 @@
-<form class="project=form">
-  <div class="form-group">
-      <input id="name" type="text">
-  </div>
-  <button>Add</button>
-  <a href="#" class="close">&times;</a>
-  <!-- link to close and back to index, &times is an x -->
-</form>
+<div class="modal">
+  <form class="project-form">
+    <div class="form-group">
+        <input id="name" type="text">
+    </div>
+    <button>Add</button>
+    <a href="#" class="close">&times;</a>
+    <!-- link to close and back to index, &times is an x -->
+  </form>
+</div>
