--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -14,8 +14,8 @@
 
     <div class=sidebar-project-links>
       <div class="sidebar-title group">
-        <h4>PROJECTS</h4>
-        <div id="project-form" class="add-project group"></div>
+
+        <div id="project-form" class="add-project group"><h4>PROJECTS</h4></div>
       </div>
       <ul id="projects"></ul>
     </div>
