--- a/app/assets/templates/projects/form.jst.ejs
+++ b/app/assets/templates/projects/form.jst.ejs
@@ -1,10 +1,14 @@
-<div class="modal">
-  <form class="project-form">
-    <div class="form-group">
-        <input id="name" type="text">
-    </div>
-    <button>Add</button>
-    <a href="#" class="close">&times;</a>
-    <!-- link to close and back to index, &times is an x -->
-  </form>
+<div id="#openModal" class="openModal">
 </div>
+
+<form class="project-form">
+  <div class="title group">
+    <h2>New Project</h2>
+    <a href="#" class="close">&times;</a>
+  </div>
+  <div class="form-group group">
+      <label for="name">Project Name:</label>
+      <input id="name" type="text">
+      <button>Create Project</button>
+  </div>
+</form>
