--- a/app/assets/templates/partials/_header.jst.ejs
+++ b/app/assets/templates/partials/_header.jst.ejs
@@ -1,4 +1,4 @@
-    <nav class="header-navbar group">
+    <!-- <nav class="header-navbar group">
 
       <ul class="header-links group">
         <li><a href="">*My Tasks</a></li>
@@ -32,4 +32,4 @@
   <header class="header"> <%= JST['partials/_header']() %> </header>
   *put this into workspace show/main page - but have to figure out how to either access rails session stuff
   from backbone side or move all the session logic to backbone.
-  ************************
+  ************************ -->
