--- a/app/assets/templates/projects/link-item.jst.ejs
+++ b/app/assets/templates/projects/link-item.jst.ejs
@@ -4,7 +4,7 @@
   </a>
 
   <div class="group">
-    <ul>...<ul>
+    <ul class="more">...<ul>
     <ul class="project-dropdown group">
       <li class="delete-project" data-id="<%= project.id %>">Delete Project</li>
     </ul>
