--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -3,22 +3,26 @@
 <div id="sidebar" class="expanded">
   <nav class="sidebar group">
 
-    <h2 class="sidebar-logo">
+    <section class="hide">
+      <button type="button" class="open">+</button>
+    </section>
+
+    <ul class="sidebar-logo">
       <a href="#">ImGonna</a> <button type="button" class="close">&times</button>
-    </h2>
+    </ul>
 
     <ul class="sidebar-links">
       <li class="my-tasks">My Tasks</li>
       <li><a href="#">*All Items</a></li>
     </ul> <br>
 
-    <div class=sidebar-project-links>
+    <ul class=sidebar-project-links>
       <div class="sidebar-title group">
 
         <div id="project-form" class="add-project group"><h4>PROJECTS</h4></div>
       </div>
       <ul id="projects"></ul>
-    </div>
+    </ul>
 
   </nav>
 </div>
