--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -383,7 +383,7 @@ li:hover .header-dropdown{
   border-left: 1px solid #7E6987;
   border-right: 1px solid #7E6987;
   display: block;
-  width: 250px;
+  width: 250px !important;
   height: calc(100% + 40px);
   margin-top: -40px;
   color: #b2b2b2;
@@ -483,11 +483,6 @@ li:hover .header-dropdown{
   position: relative;
   float: left;
   display: block;
-  /*background: #EDE9F2;
-  border-radius: 5px;
-  border: 1px solid #7E6987;
-  /*display: block;
-  height: 100%;*/
 }
 
 .main {
@@ -574,16 +569,17 @@ label.tasks-check {
 }
 
 input[type="checkbox"]:hover + label::before {
-  background: #C0B1C7;
-  background-image: linear-gradient(to bottom, #C0B1C7, #A28BAD);
-  border: 1px solid #7E6987;
+  color: #ab5fcc;
+  border: 2px solid #ab5fcc;
 }
 
 label.tasks-check::before {
-  content: "";
+  content: "✓";
+  text-align: center;
   width: 15px;
   height: 15px;
-  border: 1px solid black;
+  border: 1px solid #b2b2b2;
+  color: #b2b2b2;
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -591,22 +587,21 @@ label.tasks-check::before {
   left: 10px;
 }
 
-input[type="checkbox"]:checked + label {
+/*input[type="checkbox"]:checked + label {
   animation: done .5s;
-}
+}*/
 
 input[type="checkbox"]:checked + label::before {
-  background: #C0B1C7;
-  background-image: linear-gradient(to bottom, #C0B1C7, #A28BAD);
-  border: 1px solid #7E6987;
+  color: #ab5fcc;
+  border: 1px solid #ab5fcc;
 }
 
 input[type="checkbox"]:checked:hover + label::before {
-  background: transparent;
-  border: 1px solid #7E6987;
+  border: 1px solid #b2b2b2;
+  color: #b2b2b2;
 }
 
-@keyframes done {
+/*@keyframes done {
   0% {
     transform: translateY(20px);
   }
@@ -616,7 +611,7 @@ input[type="checkbox"]:checked:hover + label::before {
   0% {
     transform: translateY(-20px);
   }
-}
+}*/
 
 .task-form {
   padding: 3px;
