--- a/app/assets/templates/users/taskshow.jst.ejs
+++ b/app/assets/templates/users/taskshow.jst.ejs
@@ -1,4 +1,4 @@
-<h1> <%= user.escape('email') %></h1>
+<h1> <%= user.escape('email') + "'s Tasks" %></h1>
 <div class="tasks-window group">
   <ul id="tasks-list" class="tasks-list"></ul>
   <div id="task-form" class="task-form"></div>
