--- a/app/assets/templates/tasks/show.jst.ejs
+++ b/app/assets/templates/tasks/show.jst.ejs
@@ -1,9 +1,10 @@
 <nav class="task-detail-nav group">
-  <ul class="task-detail-links">
+  <ul class="task-detail-links group">
 
     <li class="task-assignee">
-
-</li>
+      <a href="#">
+      </a>
+    </li>
 
     <li class="task due date">
       <a href="#">
@@ -20,7 +21,7 @@
   </ul>
 </nav>
 
-<div class="task-show">
+<div class="task-show group">
   <h4 class="project-name">  </h4>
 
 
