--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -13,7 +13,7 @@
 
     <ul class="sidebar-links">
       <li class="my-tasks">My Tasks</li>
-      <li><a href="#">*All Items</a></li>
+      <!-- <li><a href="#">*All Items</a></li> -->
     </ul> <br>
 
     <ul class=sidebar-project-links>
