--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,9 +3,9 @@
     <nav class="header-navbar group">
 
       <ul id="header-links" class="header-links group">
-        <li><a href="#">*My Tasks</a></li>
+        <!-- <li><a href="#">*My Tasks</a></li>
         <li><a href="#">*Dropdown</a></li>
-        <li><a href="#">*Search</a></li>
+        <li><a href="#">*Search</a></li> -->
 
         <li><div id="current-workspace"></div>
 
