edit field isn't so far down.

--- a/app/assets/templates/workspaces/form.jst.ejs
+++ b/app/assets/templates/workspaces/form.jst.ejs
@@ -1,10 +1,13 @@
-<h1>Workspace Form</h1>
+<div class="workspace-new">
+  <h1>New Workspace</h1>
 
-<form>
-  <label for="name">Name</label>
-  <input id="name" type="text" name="workspace[name]">
-  <!-- will add ability to add members/users to workspace  -->
-  <button>Submit</button>
-</form>
+  <form class="workspace-form">
+    <label class="workspace-label" for="name">Name</label>
+    <input class="workspace-input" id="name" type="text" name="workspace[name]">
+    <!-- will add ability to add members/users to workspace  -->
+    <button class="workspace-button">Submit</button>
+  </form>
 
-<ul class="errors"></ul>
+  <ul class="errors"></ul>
+
+</div>
