--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -613,6 +613,16 @@ input[type="checkbox"]:checked:hover + label::before {
   font-size: 15px;
 }
 
+.task-form form{
+  padding: 3px;
+  color: #B0AAB3;
+  font-size: 15px;
+  margin-top: -35px;
+  margin-bottom: 20px;
+  display: block;
+  float: left;
+}
+
 .task-detail-links > li {
   float: left;
   position: relative;
@@ -921,4 +931,69 @@ section button {
 
 .task-due-date {
   width: 100px;
+}
+
+
+
+.workspace-new {
+  display: block;
+  background: white;
+  position: absolute;
+  margin: 200px 300px;
+  width: 500px;
+  height: 200px;
+  border-radius: 5px;
+}
+
+.workspace-new h1 {
+  font-size: 24px;
+  padding: 20px;
+}
+
+.workspace-form {
+  width: 80%;
+  margin: auto;
+}
+
+.workspace-label {
+  color: #b2b2b2;
+}
+
+.workspace-input {
+  width: 100%;
+  border-top: 1px solid #C0B1C7;
+  border: 1px solid #b2b2b2;
+  padding: 5px;
+  border-radius: 3px;
+  -webkit-transition: all 0.30s ease-in-out;
+  background: white;
+  color: #b2b2b2;
+  margin-bottom: 5px;
+}
+
+.workspace-input:focus {
+  box-shadow: 0px 0px 3px 0px #BC94E0;
+  border: 1px solid #BC94E0;
+  color: black;
+}
+
+.workspace-button {
+  background: #efeded;
+  border: 1px solid #b2b2b2;
+  padding: 10px;
+  color: #b2b2b2;
+  display: block;
+  border-radius: 3px;
+  width: 80px;
+  text-align: center;
+  margin-top: 5px;
+  float: right;
+}
+
+.workspace-button:hover {
+  background: #c271e8;
+  /*box-shadow: 0px 0px 6px 0px #BC94E0;*/
+  border: 3px solid #d89af4;
+  padding: 8px;
+  color: white;
 }
