--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -29,7 +29,7 @@
 
 <div id="main" class="main group">
   <div class="project-show" id="project-show"></div>
-  <div class="task-detail-show" id="task-detail-show"></div>
+  <div class="task-detail-show group" id="task-detail-show"></div>
 </div>
 
 </div>
