--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,7 +33,7 @@ html, body, header, nav, h1, h2, h4, h5, a, ul, li, div, form, p, input, button 
 }
 
 html {
-  min-height: 100%;
+  min-height: calc(100% + 40px);
   background:
     	linear-gradient(
     		45deg,
@@ -643,7 +643,6 @@ input[type="checkbox"]:checked:hover + label::before {
 
 .task-completed {
   margin-left: -20px;
-  background: blue;
 }
 
 #task-name {
@@ -907,8 +906,10 @@ section button {
 
 
 .task-detail-show {
-  background: blue;
-  border-radius: 5px;
+  background: #EDE9F2;
+  border: 1px solid #7E6987;
+  margin: 10px 10px 0px 10px;
+  border-radius: 5px 5px 0px 0px;
   order: 3;
   margin: 10px;
   display: block;
@@ -918,9 +919,10 @@ section button {
 .task-detail-nav {
   position: relative;
   height: 40px;
-  width: 300px;
+  width: 100%;
   display: block;
   float: left;
+  border-bottom: 1px solid #7E6987;
 }
 
 .task-show {
