--- a/app/assets/templates/tasks/show.jst.ejs
+++ b/app/assets/templates/tasks/show.jst.ejs
@@ -4,8 +4,7 @@
     <li class="task-assignee">
       <a href="#">
         <% if (task.escape('assignee_id')) {%>
-          <% debugger %>
-        <% users.getOrFetch(task.escape('assignee_id')).escape('email') %>
+        <%= users.get(task.escape('assignee_id')).escape('email') %>
         <% } else { %>
           <%= "Unassigned" %>
           <% } %>
