--- a/app/assets/templates/tasks/link-item.jst.ejs
+++ b/app/assets/templates/tasks/link-item.jst.ejs
@@ -6,7 +6,8 @@
     <p class="editable" data-id="<%= task.id %>" data-field="name">
         <%=task.escape('name')%>
     </p>
-<button data-task-id="<%= task.id %>" data-project-id="<%= task.escape('project_id') %>" class="task-detail">></button>
+<button data-task-id="<%= task.id %>" data-project-id="<%= task.escape('project_id') %>" class="task-detail">>
+</button>
 
 
 
